--- a/Ecommerce/banner.html
+++ b/Ecommerce/banner.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/Ecommerce/ecommerce.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../ecommerce.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
@@ -26,10 +26,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Ecommerce/ecommerce.html#contact-us">Contact Us</a>
+            <a class="nav-link" href="../ecommerce.html#contact-us">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Ecommerce/ecommerce.html#about-us">About Us</a>
+            <a class="nav-link" href="../ecommerce.html#about-us">About Us</a>
           </li>
         </ul>
       </div>
