--- a/Ecommerce/cart.html
+++ b/Ecommerce/cart.html
@@ -86,7 +86,7 @@
 					        </td>
 					        <td> 8,000 </td>
 					        <td data-th="Quantity">
-								<input type="number" class="form-control text-center" value="">
+								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td> 8,000 </td>
 					        <td class="actions" data-th="" style="width:10%;">
